--- a/.github/workflows/build-docker-corsika-simtelarray-image.yml
+++ b/.github/workflows/build-docker-corsika-simtelarray-image.yml
@@ -1,6 +1,7 @@
 ---
 name: docker-corsika-simtelarray
 # Build and push vanilla CORSIKA / sim_telarray image and simtools-prod images for different CPU architectures.
+# Integration tests are running on the non-optimized ('no_opt') image.
 
 on:
   workflow_dispatch:
@@ -50,7 +51,6 @@ jobs:
   build-corsika-simtelarray:
     runs-on: ubuntu-latest
     needs: download-corsika
-    if: false
     permissions:
       contents: read
       packages: write
@@ -140,11 +140,11 @@ jobs:
           # - {simtel_version: '240927', corsika_version: '77550', bernlohr_version: '1.68'}
         hadronic_model: ['qgs2']
         production:
-#          - {build_opt: 'prod6-sc', extra_def: '-DMAXIMUM_TELESCOPES=128'}
+          - {build_opt: 'prod6-sc', extra_def: '-DMAXIMUM_TELESCOPES=128'}
           - {build_opt: 'prod6-baseline', extra_def: ''}
           # - {build_opt: 'prod5', extra_def: ''}
           # - {build_opt: 'prod5-sc', extra_def: ''}
-        avx_instruction: ['avx2', 'noopt']
+        avx_instruction: ['avx2', 'no_opt']
         # avx_instruction: ['avx2', 'avx512f', 'sse4', 'avx']
 
     env:
@@ -224,14 +224,15 @@ jobs:
       matrix:
         version:
           - {simtel_version: '240205', corsika_version: '77500', bernlohr_version: '1.67'}
-#          - {simtel_version: '240927', corsika_version: '77550', bernlohr_version: '1.68'}
+          # - {simtel_version: '240927', corsika_version: '77550', bernlohr_version: '1.68'}
         hadronic_model: ['qgs2']
         production:
-#          - {build_opt: 'prod6-sc', extra_def: '-DMAXIMUM_TELESCOPES=128'}
+          - {build_opt: 'prod6-sc', extra_def: '-DMAXIMUM_TELESCOPES=128'}
           - {build_opt: 'prod6-baseline', extra_def: ''}
-        avx_instruction: ['noopt']
+        avx_instruction: ['no_opt']
     container:
-      image: ghcr.io/gammasim/simtools-prod-opt-${{ matrix.version.simtel_version }}-corsika-${{ matrix.version.corsika_version }}-bernlohr-${{ matrix.version.bernlohr_version }}-${{ matrix.production.build_opt }}-${{ matrix.hadronic_model }}-${{ matrix.avx_instruction }}
+      image: >
+        ghcr.io/gammasim/simtools-prod-opt-${{ matrix.version.simtel_version }}-corsika-${{ matrix.version.corsika_version }}-bernlohr-${{ matrix.version.bernlohr_version }}-${{ matrix.production.build_opt }}-${{ matrix.hadronic_model }}-${{ matrix.avx_instruction }}
       env:
         SIMTOOLS_SIMTEL_PATH: "/workdir/sim_telarray"
         SIMTOOLS_DB_API_PORT: ${{ env.SIMTOOLS_DB_API_PORT }}
@@ -252,11 +253,10 @@ jobs:
           SIMTOOLS_DB_SIMULATION_MODEL="${SIMTOOLS_DB_SIMULATION_MODEL//\'/}"
           echo "SIMTOOLS_DB_SIMULATION_MODEL=$SIMTOOLS_DB_SIMULATION_MODEL" >> "$GITHUB_ENV"
 
-      - name: Run test
+      - name: Run integration tests
         env:
           SIMTOOLS_DB_SIMULATION_MODEL: ${{ env.SIMTOOLS_DB_SIMULATION_MODEL }}
         run: |
           source /workdir/env/bin/activate
-          # simtools-simulate-prod --config tests/integration_tests/config/simulate_prod_gamma_20_deg_South_pack_for_grid.yml
-          pip install --no-cache-dir pytest pytest-cov pytest-requirements pytest-xdist 
-          pytest --no-cov -n auto tests/integration_tests/test_applications_from_config.py
+          pip install --no-cache-dir pytest pytest-cov pytest-requirements pytest-xdist
+          pytest --no-cov --color=yes -n auto tests/integration_tests/test_applications_from_config.py
