--- a/docker/Dockerfile-prod-opt
+++ b/docker/Dockerfile-prod-opt
@@ -8,6 +8,7 @@ ARG AVX_FLAG="avx2"
 ARG CORSIKA_VERSION="77550"
 ARG BERNLOHR_VERSION="1.68"
 ARG BUILD_BRANCH=main
+ARG PYTHON_VERSION=3.12
 ARG SIMTOOLS_REQUIREMENT="git+https://github.com/gammasim/simtools.git"
 
 RUN yum update -y && yum install -y \
@@ -85,16 +86,17 @@ FROM almalinux:9.5-minimal
 WORKDIR /workdir
 ARG BUILD_BRANCH=main
 ARG SIMTOOLS_REQUIREMENT="git+https://github.com/gammasim/simtools.git"
+ARG PYTHON_VERSION=3.12
 COPY --from=build_image /workdir/sim_telarray/ /workdir/sim_telarray/
 
 RUN microdnf update -y && microdnf install -y \
     bc findutils gcc-c++ git gsl-devel gcc-fortran libgfortran \
-    procps python3.12-devel zstd && \
+    procps python${PYTHON_VERSION}-devel zstd && \
     microdnf clean all
 
 RUN BUILD_BRANCH=$(echo $BUILD_BRANCH | sed 's#refs/tags/##') \
   && git clone -b $BUILD_BRANCH https://github.com/gammasim/simtools.git --depth 1 \
-  && python3.12 -m venv env \
+  && python${PYTHON_VERSION} -m venv env \
   && source env/bin/activate \
   && pip install -U pip \
   && pip install --no-cache-dir ${SIMTOOLS_REQUIREMENT}
