--- a/.github/workflows/CI-unittests.yml
+++ b/.github/workflows/CI-unittests.yml
@@ -3,10 +3,10 @@ name: CI-unittests
 # Execute unit tests
 # (includes CTAO-DPPS-SonarQube)
 env:
-  SIMTOOLS_DB_SERVER: ${{ secrets.DB_SERVER }}
-  SIMTOOLS_DB_API_USER: ${{ secrets.DB_API_USER }}
-  SIMTOOLS_DB_API_PW: ${{ secrets.DB_API_PW }}
-  SIMTOOLS_DB_API_PORT: ${{ secrets.DB_API_PORT }}
+  SIMTOOLS_DB_SERVER: localhost
+  SIMTOOLS_DB_API_USER: api
+  SIMTOOLS_DB_API_PW: password
+  SIMTOOLS_DB_API_PORT: 27017
   SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
 on:
@@ -17,7 +17,6 @@ on:
     - cron: "0 0 * * *"
 
 jobs:
-
   unittests:
     runs-on: ${{ matrix.os }}
     strategy:
@@ -40,6 +39,20 @@ jobs:
             python-version: "3.12"
             install-method: mamba
 
+    services:
+      mongodb:
+        image: mongo:latest
+        env:
+          MONGO_INITDB_ROOT_USERNAME: root
+          MONGO_INITDB_ROOT_PASSWORD: example
+        ports:
+          - 27017:27017
+        options: >
+          --health-cmd "mongosh --eval 'db.runCommand({ ping: 1 })'"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     defaults:
       run:
         shell: bash -leo pipefail {0}
@@ -49,6 +62,32 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      - name: Wait for MongoDB to be ready
+        run: |
+          for i in {1..30}; do
+            if mongosh --host localhost --port 27017 --eval "db.runCommand({ ping: 1 })"; then
+              echo "MongoDB is ready"
+              exit 0
+            fi
+            echo "Waiting for MongoDB to start... ($i)"
+            sleep 2
+          done
+          echo "MongoDB did not start in time"
+          exit 1
+
+      - name: Create MongoDB User
+        run: |
+          mongosh --host localhost --port 27017 -u root -p example --authenticationDatabase admin --eval "
+          db.createUser({
+            user: 'api',
+            pwd: 'password',
+            roles: [
+              { role: 'readWriteAnyDatabase', db: 'admin' },
+              { role: 'dbAdminAnyDatabase', db: 'admin' },
+              { role: 'userAdminAnyDatabase', db: 'admin' }
+            ]
+          });"
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -60,7 +99,6 @@ jobs:
         env:
           PYTHON_VERSION: ${{ matrix.python-version }}
         run: |
-          # setup correct python version
           sed -i -e "s/- python=.*/- python=$PYTHON_VERSION/g" environment.yml
 
       - name: Install mamba dependencies
@@ -80,7 +118,6 @@ jobs:
 
       - if: ${{ matrix.install-method == 'pip' && runner.os == 'macOS' }}
         name: Fix Python PATH on macOS
-        # from https://github.com/cta-observatory/ctapipe/blob/cfacbe1eeb2d9a4634980e5f1ef39b944bca6a7a/.github/workflows/ci.yml#L100
         run: |
           tee -a "$HOME/.bash_profile" <<< "export PATH=$pythonLocation/bin:$PATH"
 
@@ -99,6 +136,11 @@ jobs:
           SIMTOOLS_DB_SIMULATION_MODEL=$(grep 'SIMTOOLS_DB_SIMULATION_MODEL=' .env_template | cut -d '=' -f2- | tr -d '"')
           SIMTOOLS_DB_SIMULATION_MODEL="${SIMTOOLS_DB_SIMULATION_MODEL//\'/}"
           echo "SIMTOOLS_DB_SIMULATION_MODEL=$SIMTOOLS_DB_SIMULATION_MODEL" >> "$GITHUB_ENV"
+
+      - name: Upload data to MongoDB
+        run: |
+          cd database_scripts/
+          ./upload_from_model_repository_to_db.sh ${{ env.SIMTOOLS_DB_SIMULATION_MODEL }}
 
       - name: Unit tests
         shell: bash -l {0}
