--- a/.github/workflows/CI-unittests.yml
+++ b/.github/workflows/CI-unittests.yml
@@ -48,8 +48,8 @@ jobs:
           MONGO_INITDB_ROOT_PASSWORD: example
         ports:
           - 27017:27017
-        options: |
-          --health-cmd "mongosh --eval 'db.runCommand({ ping: 1 })'"
+        options: >-
+          --health-cmd mongosh\ --eval\ \"db.runCommand\(\{\ ping:\ 1\ \}\)\"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
