--- a/.github/workflows/CI-unittests.yml
+++ b/.github/workflows/CI-unittests.yml
@@ -49,7 +49,7 @@ jobs:
         ports:
           - 27017:27017
         options: >-
-          --health-cmd mongosh\ --eval\ \"db.runCommand\(\{\ ping:\ 1\ \}\)\"
+          --health-cmd "mongosh --eval 'db.runCommand({ ping: 1 })'"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
