--- a/.github/workflows/CI-unittests.yml
+++ b/.github/workflows/CI-unittests.yml
@@ -41,18 +41,18 @@ jobs:
           #  install-method: mamba
 
     services:
-      mongodb:
-        image: mongo:latest
-        env:
-          MONGO_INITDB_ROOT_USERNAME: root
-          MONGO_INITDB_ROOT_PASSWORD: example
-        ports:
-          - 27017:27017
-        options: >-
-          --health-cmd "mongosh --eval 'db.runCommand({ ping: 1 })'"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+        mongodb:
+          image: mongo:latest
+          env:
+            MONGO_INITDB_ROOT_USERNAME: api
+            MONGO_INITDB_ROOT_PASSWORD: password
+          ports:
+            - 27017:27017
+          options: >-
+            --health-cmd "mongosh --host localhost --port 27017 -u api -p password --authenticationDatabase admin --eval 'db.runCommand({ ping: 1 })'"
+            --health-interval 10s
+            --health-timeout 5s
+            --health-retries 5
 
     defaults:
       run:
@@ -63,32 +63,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
-      - name: Wait for MongoDB to be ready
-        run: |
-          for i in {1..30}; do
-            if mongosh --host localhost --port 27017 --eval "db.runCommand({ ping: 1 })"; then
-              echo "MongoDB is ready"
-              exit 0
-            fi
-            echo "Waiting for MongoDB to start... ($i)"
-            sleep 2
-          done
-          echo "MongoDB did not start in time"
-          exit 1
-
-      - name: Create MongoDB User
-        run: |
-          mongosh --host localhost --port 27017 -u root -p example --authenticationDatabase admin --eval "
-          db.createUser({
-            user: 'api',
-            pwd: 'password',
-            roles: [
-              { role: 'readWriteAnyDatabase', db: 'admin' },
-              { role: 'dbAdminAnyDatabase', db: 'admin' },
-              { role: 'userAdminAnyDatabase', db: 'admin' }
-            ]
-          });"
 
       - name: Set up Python
         uses: actions/setup-python@v5
