--- a/.github/workflows/build-simtools-production-image.yml
+++ b/.github/workflows/build-simtools-production-image.yml
@@ -28,7 +28,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        simtel_version: ['240205', '240927', '250403']
+        simtel_version: ['240205', '240927', '250304']
 
     steps:
       - name: Checkout repository
@@ -64,7 +64,7 @@ jobs:
         version:
           # - {simtel_version: '240205', corsika_version: '77500', bernlohr_version: '1.67'}
           - {simtel_version: '240927', corsika_version: '77550', bernlohr_version: '1.68', hadronic_model: 'qgs2'}
-          - {simtel_version: '250403', corsika_version: '78000', bernlohr_version: '1.69', hadronic_model: 'qgs3'}
+          - {simtel_version: '250304', corsika_version: '78000', bernlohr_version: '1.69', hadronic_model: 'qgs3'}
 
     env:
       LABELS: '${{ matrix.version.simtel_version }}-corsika-${{ matrix.version.corsika_version }}-bernlohr-${{ matrix.version.bernlohr_version }}-${{ matrix.production.build_opt }}-${{ matrix.version.hadronic_model }}'
@@ -136,19 +136,17 @@ jobs:
     strategy:
       matrix:
         version:
-          # - {simtel_version: '240205', corsika_version: '77500', bernlohr_version: '1.67'}
-          - {simtel_version: '240927', corsika_version: '77550', bernlohr_version: '1.68'}
-        hadronic_model: ['qgs2']
+          # list of avx instructions: 'avx2', 'avx512f', 'sse4', 'avx'
+          - {simtel_version: '240927', corsika_version: '77550', bernlohr_version: '1.68', hadronic_model: 'qgs2', avx_instruction: 'no_opt'}
+          - {simtel_version: '240927', corsika_version: '77550', bernlohr_version: '1.68', hadronic_model: 'qgs2', avx_instruction: 'avx2'}
+          - {simtel_version: '250304', corsika_version: '78000', bernlohr_version: '1.69', hadronic_model: 'qgs3', avx_instruction: 'no_opt'}
         production:
+          # list of productions build options: 'prod6-sc', 'prod6-baseline', 'prod5', 'prod5-sc'
           - {build_opt: 'prod6-sc', extra_def: ''}
           - {build_opt: 'prod6-baseline', extra_def: ''}
-          # - {build_opt: 'prod5', extra_def: ''}
-          # - {build_opt: 'prod5-sc', extra_def: ''}
-        avx_instruction: ['avx2', 'no_opt']
-        # avx_instruction: ['avx2', 'avx512f', 'sse4', 'avx']
 
     env:
-      LABELS: "${{ matrix.version.simtel_version }}-corsika-${{ matrix.version.corsika_version }}-bernlohr-${{ matrix.version.bernlohr_version }}-${{ matrix.production.build_opt }}-${{ matrix.hadronic_model }}-${{ matrix.avx_instruction }}"
+      LABELS: "${{ matrix.version.simtel_version }}-corsika-${{ matrix.version.corsika_version }}-bernlohr-${{ matrix.version.bernlohr_version }}-${{ matrix.production.build_opt }}-${{ matrix.version.hadronic_model }}-${{ matrix.version.avx_instruction }}"
 
     steps:
       - name: Checkout repository
@@ -200,8 +198,8 @@ jobs:
           build-args: |
             BUILD_OPT=${{ matrix.production.build_opt }}
             EXTRA_DEF=${{ matrix.production.extra_def }}
-            HADRONIC_MODEL=${{ matrix.hadronic_model }}
-            AVX_FLAG=${{ matrix.avx_instruction }}
+            HADRONIC_MODEL=${{ matrix.version.hadronic_model }}
+            AVX_FLAG=${{ matrix.version.avx_instruction }}
             CORSIKA_VERSION=${{ matrix.version.corsika_version }}
             BERNLOHR_VERSION=${{ matrix.version.bernlohr_version }}
             BUILD_BRANCH=${{ env.BUILD_BRANCH }}
@@ -223,15 +221,16 @@ jobs:
     strategy:
       matrix:
         version:
-          # - {simtel_version: '240205', corsika_version: '77500', bernlohr_version: '1.67'}
-          - {simtel_version: '240927', corsika_version: '77550', bernlohr_version: '1.68'}
-        hadronic_model: ['qgs2']
+          # list of avx instructions: 'avx2', 'avx512f', 'sse4', 'avx'
+          - {simtel_version: '240927', corsika_version: '77550', bernlohr_version: '1.68', hadronic_model: 'qgs2', avx_instruction: 'no_opt'}
+          - {simtel_version: '240927', corsika_version: '77550', bernlohr_version: '1.68', hadronic_model: 'qgs2', avx_instruction: 'avx2'}
+          - {simtel_version: '250304', corsika_version: '78000', bernlohr_version: '1.69', hadronic_model: 'qgs3', avx_instruction: 'no_opt'}
         production:
+          # list of productions build options: 'prod6-sc', 'prod6-baseline', 'prod5', 'prod5-sc'
           - {build_opt: 'prod6-sc', extra_def: ''}
           - {build_opt: 'prod6-baseline', extra_def: ''}
-        avx_instruction: ['no_opt']
     container:
-      image: ghcr.io/gammasim/simtools-prod-${{ matrix.version.simtel_version }}-corsika-${{ matrix.version.corsika_version }}-bernlohr-${{ matrix.version.bernlohr_version }}-${{ matrix.production.build_opt }}-${{ matrix.hadronic_model }}-${{ matrix.avx_instruction }}
+      image: ghcr.io/gammasim/simtools-prod-${{ matrix.version.simtel_version }}-corsika-${{ matrix.version.corsika_version }}-bernlohr-${{ matrix.version.bernlohr_version }}-${{ matrix.production.build_opt }}-${{ matrix.version.hadronic_model }}-${{ matrix.version.avx_instruction }}
       env:
         SIMTOOLS_SIMTEL_PATH: "/workdir/sim_telarray"
         SIMTOOLS_DB_API_PORT: ${{ env.SIMTOOLS_DB_API_PORT }}
