--- a/docker/Dockerfile-prod-opt
+++ b/docker/Dockerfile-prod-opt
@@ -13,7 +13,7 @@ ARG SIMTOOLS_REQUIREMENT="git+https://github.com/gammasim/simtools.git"
 
 RUN yum update -y && yum install -y \
     gcc-fortran gsl-devel libgfortran \
-    autoconf automake csh patch perl which && \
+    autoconf automake csh patch perl which bzip2 && \
     yum clean all
 
 ADD corsika_simtelarray.tar.gz .
@@ -75,12 +75,19 @@ RUN mv ./corsika-7*/run corsika-run && \
     find . -name "*.o" -delete && \
     rm -rf /var/cache/yum/* /tmp/* /var/tmp/*
 
-# remove unnecessary large QGSJet tables (e.g. remove qgs3 tables when using qgs2)
-RUN if [[ "$HADRONIC_MODEL" == "qgs3" ]]; then \
-        find . -name "qgsdat-II-04.bz2" -exec rm -fv {} \; ; \
+# Unzip QGSJet tables; remove tables not needed (e.g. remove qgs3 tables when using qgs2)
+RUN cd corsika-run && \
+    if [[ "$HADRONIC_MODEL" == "qgs3" ]]; then \
+        if [ -f qgsdat-III.bz2 ]; then \
+            bzip2 -dq qgsdat-III.bz2; \
+        fi; \
+        rm -f -v qgsdat-II-04.bz2; \
     fi && \
     if [[ "$HADRONIC_MODEL" == "qgs2" ]]; then \
-        find . -name "qgsdat-III.bz2" -exec rm -fv {} \; ; \
+        if [ -f qgsdat-II-04.bz2 ]; then \
+            bzip2 -dq qgsdat-II-04.bz2; \
+        fi; \
+        rm -f -v qgsdat-III.bz2; \
     fi
 
 # create a yml file in workdir with the build options
@@ -116,7 +123,9 @@ RUN BUILD_BRANCH=$(echo $BUILD_BRANCH | sed 's#refs/tags/##') \
   && python${PYTHON_VERSION} -m venv env \
   && source env/bin/activate \
   && pip install -U pip \
-  && pip install --no-cache-dir "git+${SIMTOOLS_REQUIREMENT}@${BUILD_BRANCH}"
+  && pip install --no-cache-dir "git+${SIMTOOLS_REQUIREMENT}@${BUILD_BRANCH}" \
+  && echo ". /workdir/env/bin/activate" >> ~/.bashrc t
 
 ENV SIMTEL_PATH="/workdir/sim_telarray"
 ENV PATH="/workdir/env/bin/:$PATH"
+SHELL ["/bin/bash", "-c"]
