--- a/tests/integration_tests/config/simulate_prod_htcondor_generator_gamma_20_deg_North.yml
+++ b/tests/integration_tests/config/simulate_prod_htcondor_generator_gamma_20_deg_North.yml
@@ -7,7 +7,7 @@ CTA_SIMPIPE:
       OUTPUT_PATH: htcondor_submit
       APPTAINER_IMAGE: test.sif
       PRIORITY: 5
-      SIMULATION_SOFTWARE: corsika_simtel
+      SIMULATION_SOFTWARE: corsika_sim_telarray
       LABEL: test-production-North
       MODEL_VERSION: 6.0.0
       SITE: North
