--- a/tests/integration_tests/config/simulate_prod_proton_20_deg_North_check_output.yml
+++ b/tests/integration_tests/config/simulate_prod_proton_20_deg_North_check_output.yml
@@ -4,7 +4,7 @@ CTA_SIMPIPE:
   - APPLICATION: simtools-simulate-prod
     TEST_NAME: proton_20_deg_north_check_output
     CONFIGURATION:
-      SIMULATION_SOFTWARE: corsika_simtel
+      SIMULATION_SOFTWARE: corsika_sim_telarray
       LABEL: check_output
       MODEL_VERSION: 6.0.0
       SITE: North
