--- a/.github/workflows/CI-integrationtests.yml
+++ b/.github/workflows/CI-integrationtests.yml
@@ -54,7 +54,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        type: ['6.0.0', '5.0.0', '6.0.0,5.0.0']
+        model_version: ['6.0.0', '5.0.0', '6.0.0,5.0.0']
 
     defaults:
       run:
@@ -66,7 +66,7 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Set PATH
+      - name: Set sim_telarray path
         run: |
           echo "PATH=\$PATH:/usr/bin:/usr/local/bin:$SIMTOOLS_SIMTEL_PATH" >> "$GITHUB_ENV"
 
@@ -115,4 +115,4 @@ jobs:
         run: |
           source /workdir/env/bin/activate
           pip install --no-cache-dir -e '.[tests,dev,doc]'
-          pytest --model_version=${{ matrix.type }} --color=yes --durations=20 -n 4 --dist loadscope --no-cov tests/integration_tests/
+          pytest --model_version=${{ matrix.model_version }} --color=yes --durations=20 -n 4 --dist loadscope --no-cov tests/integration_tests/
