--- a/.github/workflows/build-simtools-production-image.yml
+++ b/.github/workflows/build-simtools-production-image.yml
@@ -292,4 +292,4 @@ jobs:
         run: |
           source /workdir/env/bin/activate
           pip install --no-cache-dir -e '.[tests,dev,doc]'
-          pytest -model_version=${{ matrix.model_version}} -n 4 --dist loadscope --no-cov tests/integration_tests/test_applications_from_config.py
+          pytest -model_version=${{ matrix.model_version}} -n auto --no-cov tests/integration_tests/test_applications_from_config.py
