--- a/.github/workflows/build-simtools-production-image.yml
+++ b/.github/workflows/build-simtools-production-image.yml
@@ -288,5 +288,4 @@ jobs:
         run: |
           source /workdir/env/bin/activate
           pip install --no-cache-dir pytest pytest-cov pytest-requirements pytest-xdist
-          # TODO - add model_version
-          pytest --no-cov --color=yes -n auto tests/integration_tests/test_applications_from_config.py
+          pytest --model_version=${{ matrix.model_version }} --no-cov --color=yes -n auto tests/integration_tests/test_applications_from_config.py
