--- a/tests/integration_tests/config/docs_produce_calibration_reports.yml
+++ b/tests/integration_tests/config/docs_produce_calibration_reports.yml
@@ -3,6 +3,7 @@ CTA_SIMPIPE:
   APPLICATIONS:
   - APPLICATION: simtools-docs-produce-calibration-reports
     TEST_NAME: run
+    MODEL_VERSION_USE_CURRENT: true
     CONFIGURATION:
       MODEL_VERSION: 6.0.0
       OUTPUT_PATH: simtools-output/reports/productions/
